workloads/lacoope/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lacoope-frontend
  namespace: lacoope
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lacoope-frontend
  template:
    metadata:
      labels:
        app: lacoope-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: frontend
          image: ghcr.io/bapttf/lacoopefrontend:0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
