workloads/lacoope/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lacoope-frontend
  namespace: lacoope
spec:
  selector:
    app: lacoope-frontend
  ports:
    - port: 3000
      targetPort: 3000
