workloads/lacoope/frontend/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lacoope-frontend-ingress
  namespace: lacoope
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lacoope.bapttf.com`)
      kind: Rule
      services:
        - name: lacoope-frontend
          port: 3000
  tls: {}
